line-smt-apis/force-app/main/default/objects/Lead__c.object
<CustomObject>
    <fields>
        <fullName>LeadLevel__c</fullName>
        <label>潛客級別</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A級</fullName>
                </value>
                <value>
                    <fullName>B級</fullName>
                </value>
                <value>
                    <fullName>C級</fullName>
                </value>
                <value>
                    <fullName>H級</fullName>
                </value>
                <value>
                    <fullName>失聯</fullName>
                </value>
                <value>
                    <fullName>退訂</fullName>
                </value>
                <value>
                    <fullName>無效</fullName>
                </value>
                <value>
                    <fullName>戰敗</fullName>
                </value>
                <value>
                    <fullName>簽訂</fullName>
                </value>
                <value>
                    <fullName>其他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>會員</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>潛客</relationshipLabel>
        <relationshipName>LeadToMember</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMTLeadId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SMT潛客ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SalesRepresentative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>業代</label>
        <referenceTo>SalesRepresentative__c</referenceTo>
        <relationshipLabel>潛客</relationshipLabel>
        <relationshipName>LeadToSalesRep</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>潛客</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SMTLeadId__c</columns>
        <columns>Member__c</columns>
        <columns>SalesRepresentative__c</columns>
        <columns>LeadLevel__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>潛客編號</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>