line-smt-apis/force-app/main/default/objects/Lead__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SMTLeadId__c</columns>
    <columns>Member__c</columns>
    <columns>SalesRepresentative__c</columns>
    <columns>LeadLevel__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>